# curso-python

./: anotacoes.md  requirements.txt
FastApi/: extensions.txt  main.py
fast_car_api/: .dockerignore  Dockerfile  alembic.ini  cars.db  docker-compose.yaml  entrypoint.sh  mkdocs.yml  pyproject.toml  requirements.txt  write_docs.py
fast_car_api/docs/: index.md
fast_car_api/fast_car_api/: app.py  database.py  routers.py  schemas.py
fast_car_api/migrations/: env.py
fast_car_api/migrations/versions/: 90e3a93369d5_create_cars_table.py
fastapi-bkp/introducao/: async_await_sponge_bob.py
fastapi-bkp/project1/: .env  routers.py  schemas.py
fastapi-bkp/project2/: .env  Dockerfile  README.md  docker-compose.yml
fastapi-bkp/project2/app/db/: models.py
fastapi-bkp/project2/app/migrations/: env.py
fastapi-bkp/project2/app/migrations/versions/: af99980f541e_add_categories_table.py
fastapi-bkp/project2/app/schemas/: category.py
fastapi-bkp/project2/app/test/use_cases/: test_category_use_cases.py
fastapi/introducao/: async_await_overvew.py  pyproject.toml
fastapi/project1/: converter.py  main.py  pyproject.toml
fastapi/project2/: README.md  pyproject.toml  requirements.txt
fastapi/project2/app/db/: connection.py
fastapi/project2/app/migrations/: env.py
fastapi/project2/app/routes/: category_routes.py
fastapi/project2/app/schemas/: category.py
fastapi/project2/app/test/: conftest.py
fastapi/project2/app/use_cases/: category.py
financ-pdv/: docker-compose.yml  requirements.txt
financ-pdv/app/: __init__.py  run.py
(+3 files in other folders)
