[project]
name = "project1"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Marques",email = "jf-marques@outlook.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "requests (>=2.34.2,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
